# mlops-tutorial

./: .gitignore  Dockerfile  README.md  api-serve-docker-compose.yaml  create_table.py  crud_pydantic.py  crud_query.py  data_generator.py  db_train.py  docker-compose.yaml  model-develop-docker-compose.yaml  multi_param.py  pyproject.toml  query_param.py  save_model_to_registry.py  table_creator.py
part1/: data_generator.py  data_insertion.py  data_insertion_loop.py
part3/: Dockerfile  docker-compose.yaml  load_model_from_registry.py
part5/: main.py
part6/: docker-compose.yaml
part7/: target-docker-compose.yaml
part8/: stream-docker-compose.yaml
