[tool.poetry]
name = "mlops-tutorial"
version = "0.1.0"
description = ""
authors = ["Ui-Seok <kasasima18@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.1"
psycopg2-binary = "^2.9.9"
scikit-learn = "^1.3.2"
joblib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
