[tool.poetry]
name = "mlops-tutorial"
version = "0.1.0"
description = ""
authors = ["Ui-Seok <kasasima18@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.1"
psycopg2-binary = "^2.9.9"
scikit-learn = "^1.3.2"
joblib = "^1.3.2"
boto3 = "1.26.8"
mlflow = "^2.8.0"
fastapi = {extras = ["all"], version = "^0.104.1"}
kafka-python = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
